<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/linLay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relLook"
            android:textSize="30dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_alignParentLeft="true"
            android:text="@string/buttonText"
            />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="161dp"
            android:layout_height="59dp"
            android:layout_toRightOf="@id/button"
            android:layout_below="@id/textView"
            android:text="@string/checkOut"
            />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/flag"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"/>

        <Switch
            android:id="@+id/on_off_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onOffSwitch"
            android:layout_below="@id/button"
            android:layout_toRightOf="@+id/imageButton"

            />


        <EditText
            android:id="@+id/plain_text_input"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:hint="@string/typeHere"
            android:layout_below="@id/imageButton"
            android:inputType="textPersonName"
            />

</RelativeLayout>
